# Find-key-word

./: CMakeLists.txt  README.md
AppGui/: CMakeLists.txt  appgui.cpp
HandingFile/: CMakeLists.txt  handingFile.cpp  handingFile.hpp
MainFrame/: CMakeLists.txt  MainFrame.cpp  MainFrame.hpp
Test/: Monsters_Lyrics.txt
